--- a/style.css
+++ b/style.css
@@ -60,13 +60,20 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 }
+/* this kind of works, but the last row would be miss-aligned and would look bad :-/ */
+.sister-projects {
+	justify-content: space-between;
+}
+.sister-projects:after {
+	content: "";
+	flex: auto;
+}
+
 .sister-project {
 	width: 220px;
+	display: flex;
 }
 .sister-project .sister-image {
-	float: left;
-	width: 50px;
-}
-.sister-project p {
-	margin: 0;
+	width: 60px;
+	margin-top: 1em;
 }
